Bug 948654: Uncomment lines to make 'align-content' and 'flex-wrap' inherit through scroll frames to scrolled flex containers. r=mats
UltraBlame original commit: 9a8ca1c0e1140fd66499d2f20ae68ed2e379fe00

--- a/layout/style/ua.css
+++ b/layout/style/ua.css
@@ -142,10 +142,10 @@
   -moz-column-gap: inherit;
   -moz-column-rule: inherit;
   
-  
+  align-content: inherit;
   align-items: inherit;
   flex-direction: inherit;
-  
+  flex-wrap: inherit;
   justify-content: inherit;
   
 
